--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^4.11.0",
     "request": "^2.88.2"
   },
   "devDependencies": {
